--- a/github-search/package.json
+++ b/github-search/package.json
@@ -15,8 +15,12 @@
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
     "babel-eslint": "^10.0.1",
+    "chai": "^4.2.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mocha": "^5.2.0",
+    "request": "^2.88.0",
+    "should": "^13.2.3",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
